// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkNudger should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      null,
    ]
  }
>
  <AndroidBPKButtonView
    disabled={false}
    icon="minus"
    iconOnly={true}
    onPress={[Function]}
    style={
      Object {
        "marginRight": 4,
      }
    }
    title="Decrease"
    type="secondary"
  />
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(17, 18, 54)",
          "fontFamily": "sans-serif",
          "fontSize": 20,
          "fontWeight": "400",
          "letterSpacing": -0.4,
          "textAlign": "left",
        },
        Object {
          "fontFamily": "sans-serif-medium",
        },
        Object {
          "minWidth": 24,
          "textAlign": "center",
        },
      ]
    }
  >
    3
  </Text>
  <AndroidBPKButtonView
    disabled={false}
    icon="plus"
    iconOnly={true}
    onPress={[Function]}
    style={
      Object {
        "marginLeft": 4,
      }
    }
    title="Increase"
    type="secondary"
  />
</View>
`;

exports[`Android BpkNudger should render correctly when value is a not an integer 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      null,
    ]
  }
>
  <AndroidBPKButtonView
    disabled={true}
    icon="minus"
    iconOnly={true}
    onPress={[Function]}
    style={
      Object {
        "marginRight": 4,
      }
    }
    title="Decrease"
    type="secondary"
  />
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(17, 18, 54)",
          "fontFamily": "sans-serif",
          "fontSize": 20,
          "fontWeight": "400",
          "letterSpacing": -0.4,
          "textAlign": "left",
        },
        Object {
          "fontFamily": "sans-serif-medium",
        },
        Object {
          "minWidth": 24,
          "textAlign": "center",
        },
      ]
    }
  >
    1
  </Text>
  <AndroidBPKButtonView
    disabled={false}
    icon="plus"
    iconOnly={true}
    onPress={[Function]}
    style={
      Object {
        "marginLeft": 4,
      }
    }
    title="Increase"
    type="secondary"
  />
</View>
`;

exports[`Android BpkNudger should render correctly when value is greater than max 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      null,
    ]
  }
>
  <AndroidBPKButtonView
    disabled={false}
    icon="minus"
    iconOnly={true}
    onPress={[Function]}
    style={
      Object {
        "marginRight": 4,
      }
    }
    title="Decrease"
    type="secondary"
  />
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(17, 18, 54)",
          "fontFamily": "sans-serif",
          "fontSize": 20,
          "fontWeight": "400",
          "letterSpacing": -0.4,
          "textAlign": "left",
        },
        Object {
          "fontFamily": "sans-serif-medium",
        },
        Object {
          "minWidth": 24,
          "textAlign": "center",
        },
      ]
    }
  >
    3
  </Text>
  <AndroidBPKButtonView
    disabled={true}
    icon="plus"
    iconOnly={true}
    onPress={[Function]}
    style={
      Object {
        "marginLeft": 4,
      }
    }
    title="Increase"
    type="secondary"
  />
</View>
`;

exports[`Android BpkNudger should render correctly when value is less than min 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      null,
    ]
  }
>
  <AndroidBPKButtonView
    disabled={true}
    icon="minus"
    iconOnly={true}
    onPress={[Function]}
    style={
      Object {
        "marginRight": 4,
      }
    }
    title="Decrease"
    type="secondary"
  />
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(17, 18, 54)",
          "fontFamily": "sans-serif",
          "fontSize": 20,
          "fontWeight": "400",
          "letterSpacing": -0.4,
          "textAlign": "left",
        },
        Object {
          "fontFamily": "sans-serif-medium",
        },
        Object {
          "minWidth": 24,
          "textAlign": "center",
        },
      ]
    }
  >
    3
  </Text>
  <AndroidBPKButtonView
    disabled={false}
    icon="plus"
    iconOnly={true}
    onPress={[Function]}
    style={
      Object {
        "marginLeft": 4,
      }
    }
    title="Increase"
    type="secondary"
  />
</View>
`;
